--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
-VITE_API_URL=https://buensaborbackecommerceohio.onrender.com
+# # DEPLOY 
+# VITE_API_URL=https://buensaborback.onrender.com # CAMBIAR
+# VITE_AUTH0_DOMAIN=dev-vsfg0vnin2tajzmv.us.auth0.com
+# VITE_AUTH0_CLIENT_ID=k26gg7Y3veIlCtb4HP6srKE8Pbu82olm # CAMBIAR?
+# VITE_AUTH0_CALLBACK_URL=https://dashfront-buensabor-drkg.vercel.app/ # CAMBIAR
+# VITE_AUTH0_AUDIENCE=http://elbuensabor.com
 
-VITE_AUTH0_DOMAIN=dev-zvdxnq2ywscyu5pn.us.auth0.com
-
-VITE_AUTH0_CLIENT_ID=RNvq7eV7kiSIQs7JiaQjt63Gik19Mxfo
-
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173/
-
-VITE_AUTH0_AUDIENCE=http://Auth0Example.com
+# # LOCAL
+VITE_API_URL=http://localhost:8080
+VITE_AUTH0_DOMAIN=dev-vsfg0vnin2tajzmv.us.auth0.com
+VITE_AUTH0_CLIENT_ID=k26gg7Y3veIlCtb4HP6srKE8Pbu82olm
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
+VITE_AUTH0_AUDIENCE=http://elbuensabor.com
