--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 
 # # LOCAL
 VITE_API_URL=http://localhost:8080
-VITE_AUTH0_DOMAIN=dev-vsfg0vnin2tajzmv.us.auth0.com
-VITE_AUTH0_CLIENT_ID=k26gg7Y3veIlCtb4HP6srKE8Pbu82olm
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
-VITE_AUTH0_AUDIENCE=http://elbuensabor.com
+# VITE_AUTH0_DOMAIN=dev-vsfg0vnin2tajzmv.us.auth0.com
+# VITE_AUTH0_CLIENT_ID=k26gg7Y3veIlCtb4HP6srKE8Pbu82olm
+# VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
+# VITE_AUTH0_AUDIENCE=http://elbuensabor.com
